# calc-lang

./: .gitignore  README.md  hie.yaml  stack.yaml  test.cabal
src/: .Compiler.hs.swp  .Parser.hs.swp  Compiler.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  TestLib.hs
